--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -206,7 +206,7 @@ E_{00} & &  & & E_{67}(=E_{76}) & & \\
 \partial_t E_{77} & = & A_{77}-D_{77} - v^p_{77}\\
 \partial_t E_{6H} & = & v^p_{66}+v^p_{67} - v_{6H}\\
 \partial_t E_{7H} & = & v^p_{77}+v^p_{76} - v_{7H}\\
-\mathfrak{E}      & = & {\displaystyle \sum_{x\leq y\leq 7} E_{xy}}+E_{6H}+E_{7H}\\
+\mathsf{E}      & = & {\displaystyle \sum_{x\leq y} E_{xy}}+E_{6H}+E_{7H}\\
 \end{array}
 \right.
 \end{equation}
