--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -247,55 +247,76 @@ And
 
 \subsubsection{Second layer as a function of the first layer}
 
+We define the first layer variables as
+\begin{equation}
+	\vec{E}_1 = \begin{bmatrix}
+	E_{06}\\
+	E_{07}\\
+	\end{bmatrix}
+\end{equation}
+and the second layer as
+\begin{equation}
+	\vec{E}_2 = \begin{bmatrix}
+	E_{66}\\
+	E_{67}\\
+	E_{77}\\
+	\end{bmatrix}
+\end{equation}
+and
+\begin{equation}
+	\vec{C} = 
+	\begin{bmatrix}
+	\LiOut{6}\\
+	\LiOut{7}\\
+	\end{bmatrix}
+\end{equation}
 
 Using the three equations describing the second layer and assuming that the internal pre-equilibrium is fast, we express:
 
 
-\end{document}
 
 \begin{equation}
 \boxed{
-E_{1\leq x \leq y \leq 2 } = <{\vec{C}} \vert \mymat{F_{xy}} \vert \vec{E}_1 >
+E_{xy} = <{\vec{C}} \vert \mymat{F_{xy}} \vert \vec{E}_1 >
 }
 \end{equation}
 with
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-\vec{C}   & = & \begin{bmatrix} C_1 \\ C2 \end{bmatrix}\\
-\\
-\vec{E}_1 & = & \begin{bmatrix} E_{01} \\ E_{02} \end{bmatrix}\\
-\\
 \mymat{F}_{11} & = & 
 \begin{bmatrix}
-	f_{11} & 0 \\
+	f_{66} & 0 \\
 	0 & 0\\
-\end{bmatrix}, \; f_{11} = \dfrac{a_{11}}{d_{11}}\\
+\end{bmatrix}, \; f_{66} = \dfrac{a_{66}}{d_{66}}\\
 \\
-\mymat{F}_{22} & = & 
+\mymat{F}_{77} & = & 
 \begin{bmatrix}
 	0 & 0 \\
-	0 & f_{22}\\
-\end{bmatrix}, \; f_{22} = \dfrac{a_{22}}{d_{22}}\\
+	0 & f_{77}\\
+\end{bmatrix}, \; f_{77} = \dfrac{a_{77}}{d_{77}}\\
 \\
-\mymat{F}_{12} & = & 
+\mymat{F}_{67} & = & 
 \begin{bmatrix}
-	0 & f_{21}\\
-	f_{12} & 0\\
-\end{bmatrix}, \; f_{12} = \dfrac{a_{12}}{d_{21}+d_{12}},\; f_{21} = \dfrac{a_{21}}{d_{21}+d_{12}}\\
+	0 & f_{76}\\
+	f_{67} & 0\\
+\end{bmatrix}, \; f_{67} = \dfrac{a_{67}}{d_{76}+d_{67}},\; f_{76} = \dfrac{a_{76}}{d_{76}+d_{67}}\\
 \end{array}
 \right.
 \end{equation}
 and the second layer mass is
 \begin{equation}
-E_{11} + E_{12} + E_{22} = <{\vec{C}} \vert \mymat{F} \vert \vec{E}_1 >, \;\;
+E_{66} + E_{67} + E_{77} = <{\vec{C}} \vert \mymat{F} \vert \vec{E}_1 >, \;\;
  \mymat{F} 
  = \begin{bmatrix}
-	f_{11} & f_{21}\\
-	f_{12} & f_{22}\\
+	f_{66} & f_{76}\\
+	f_{67} & f_{77}\\
 \end{bmatrix}
 \end{equation}
 and
+
+\end{document}
+
 \begin{equation}
 \left\lbrace
 \begin{array}{rcll}
