--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -176,7 +176,8 @@ In particular, with
 
 \section{Two Layers}
 \subsection{Scheme}
-
+{
+\Large
 \begin{equation}
 \boxed{
 \begin{array}{ccccccc}
@@ -193,6 +194,7 @@ E_{00} & &  & & E_{67}(=E_{76}) & & \\
  \end{array}
  }
 \end{equation}
+}
 
 \subsection{Equations}
 \begin{equation}
@@ -372,6 +374,25 @@ a_{06} & 0 \\
 \end{bmatrix}
 }_{\mymat{A}_0}
 \vec{C}
+\end{equation}
+Leading to
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+K_6' & = & K_6/d_{06}\\
+K_7' & = & K_7/d_{07}\\
+D_{1} & = & 1+ C_7 K_7'+ C_6 K_6'\\
+\\
+\vec{E}_1 & = & \dfrac{1}{D_1}
+	\begin{bmatrix}
+	1/d_{06} + C_6 K_6' & C_6 K_6'\\
+	C_7 K_7' & 1/d_{07} + C_7 K_7' \\
+	\end{bmatrix}
+	\left( 
+	k_h \vec{E}_h + E_{00} \mymat{A}_0 \vec{C}
+	\right)\\
+\end{array}
+\right.
 \end{equation}
 
 \end{document}
