--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -437,7 +437,9 @@ W_1\mathsf{E} & = & W_1E_{00} + W_1 <\vec{P}_1|\vec{E}_H> +
 	\left( <\vec{P}_1| + <\vec{C}|\mymat{F}| \right) 
 	\left[ \mymat{D}_0^{-1} \left(\mymat{I}_d+\mymat{M}_1\right)\right]
 	| \mymat{M}_H \vec{E}_H + E_{00} \mymat{A}_0 \vec{C} > \\
-	& = & \\
+	& = & 
+	W_1 E_{00} + W_1 <\vec{P}_1|\vec{E}_H>
+	 \\
 \end{array}
 \right.
 \end{equation}
