--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -384,7 +384,7 @@ d_{06} \left(1+ K_7\LiOut{7}\right) & -d_{07}K_6\LiOut{6}\\
 	h^h_6 & 0 \\
 	0     & k^h_7\\
 \end{bmatrix}
-}_{\mymat{M}_H}
+}_{\mymat{R}_H}
 \vec{E}_H 
 + E_{00}
 \underbrace{
@@ -400,13 +400,13 @@ Leading to
 \left\lbrace
 \begin{array}{rcl}
 W_1 & = & 1 +    K_6\LiOut{6} +  K_7 \LiOut{7}  \\
-\vec{E}_1 & = &\dfrac{1}{W_1}
-\underbrace{
+W_1 \vec{E}_1 & = & \underbrace{
 \begin{bmatrix}
 d_{06}^{-1} & 0 \\
 0 & d_{07}^{-1} \\
 \end{bmatrix}
 }_{\mymat{D}_0^{-1}}
+\underbrace{
 \left(
 \mymat{I}_d+
 \underbrace{
@@ -415,9 +415,9 @@ d_{06}^{-1} & 0 \\
 	K_7\LiOut{7} & K_7 \LiOut{7}\\
 	\end{bmatrix}
 	}_{\mymat{M}_1}
-		\right)
+		\right)}_{\mymat{M}_1'}
 	\left( 
-	\mymat{M}_H \vec{E}_H + E_{00} \mymat{A}_0 \vec{C}
+	\mymat{R}_H \vec{E}_H + E_{00} \mymat{A}_0 \vec{C}
 	\right)
 	\\
 \end{array}
@@ -425,7 +425,7 @@ d_{06}^{-1} & 0 \\
 \end{equation}
 
 \subsection{Using Mass Conservation}
-Using $$\vec{P}_1=\begin{bmatrix}1\\1\\\end{bmatrix}$$,
+Using $$\vec{P}_1=\begin{bmatrix}1\\1\\\end{bmatrix}$$
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
@@ -433,13 +433,30 @@ Using $$\vec{P}_1=\begin{bmatrix}1\\1\\\end{bmatrix}$$,
 + \underbrace{E_{11}+E_{12}+E_{22}}_{<\vec{C}|\mymat{F}|\vec{E}_1>} 
 + \underbrace{E_{01}+E_{02}}_{<\vec{P}_1|\vec{E}_1>} 
 + \underbrace{E_{6H} + E_{7H}}_{<\vec{P}_1|\vec{E}_H>}\\
-W_1\mathsf{E} & = & W_1E_{00} + W_1 <\vec{P}_1|\vec{E}_H> + 
-	\left( <\vec{P}_1| + <\vec{C}|\mymat{F}| \right) 
-	\left[ \mymat{D}_0^{-1} \left(\mymat{I}_d+\mymat{M}_1\right)\right]
-	| \mymat{M}_H \vec{E}_H + E_{00} \mymat{A}_0 \vec{C} > \\
-	& = & 
-	W_1 E_{00} + W_1 <\vec{P}_1|\vec{E}_H>
-	 \\
+W_1\mathsf{E} & = & W_1E_{00} + <\vec{P_1} + \mytrn{\mymat{F}} \vec{C} | W_1 \vec{E}_1 > +  < W_1\vec{P_1} | \vec{E}_H>\\
+     & = &  W_1E_{00} + <\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{R}_H \right) | \vec{E}_H> + 
+     <\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0 \right) | \vec{C}> E_{00}
+\end{array}
+\right.
+\end{equation}
+and
+\begin{equation}
+\boxed{
+	E_{00} = \dfrac{W_1 \mathsf{E} - <\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{R}_H \right) | \vec{E}_H> }
+	{ W_1+\underbrace{<\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0 \right) | \vec{C}>}_{W_0}}
+}
+\end{equation}
+In particular
+\begin{equation}
+	E_{00}^\varnothing = \dfrac{W_1 \mathsf{E}}{W_1+W_0}
+\end{equation}
+and
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	W_1 \vec{E}_1^\varnothing & = & E_{00}^\varnothing \left(\mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0\right) \vec{C}\\
+	\\
+	\vec{E}_1^\varnothing     & = & \dfrac{\mathsf{E}}{W_1+W_0}\left(\mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0\right) \vec{C}\\
 \end{array}
 \right.
 \end{equation}
