--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -350,8 +350,8 @@ and
 	\end{bmatrix}
 	\\
 	\\
-	\partial_t \Li{7} & = & <\vec{C}|\mymat{G}_7|\vec{E}_1> \proton + k_1\left(\Theta \LiOut{6} - \Li{6}\right), &
-	\mymat{G}_2 = 
+	\partial_t \Li{7} & = & <\vec{C}|\mymat{G}_7|\vec{E}_1> \proton + k_7\left(\Theta \LiOut{7} - \Li{7}\right), &
+	\mymat{G}_7 = 
 	\begin{bmatrix}
 	0              & f_{76} k^p_{76}\\
 	f_{67}k^p_{76} & f_{77}k^p_{77}\\
@@ -443,7 +443,7 @@ and
 \begin{equation}
 \boxed{
 	E_{00} = \dfrac{W_1 \mathsf{E} - <\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{R}_H \right) | \vec{E}_H> }
-	{ W_1+\underbrace{<\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0 \right) | \vec{C}>}_{W_0}}
+	{ W_1+\underbrace{<\vec{P_1} + \mytrn{\mymat{F}} \vec{C}| \underbrace{\left( \mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0 \right)}_{\mymat{M}_0} | \vec{C}>}_{W_0}}
 }
 \end{equation}
 In particular
@@ -454,11 +454,15 @@ and
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-	W_1 \vec{E}_1^\varnothing & = & E_{00}^\varnothing \left(\mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0\right) \vec{C}\\
+	W_1 \vec{E}_1^\varnothing & = & E_{00}^\varnothing  \mymat{M}_0 \vec{C}\\
 	\\
-	\vec{E}_1^\varnothing     & = & \dfrac{\mathsf{E}}{W_1+W_0}\left(\mymat{D}_0^{-1} \mymat{M}_1' \mymat{A}_0\right) \vec{C}\\
+	\vec{E}_1^\varnothing     & = & \dfrac{\mathsf{E}}{W_1+W_0}\mymat{M}_0 \vec{C}\\
 \end{array}
 \right.
+\end{equation}
+We deduce
+\begin{equation}
+	E_{xy}^\varnothing = \dfrac{\mathsf{E}}{W_1+W_0} <\vec{C}|\mymat{F}_{xy}\mymat{M}_0|\vec{C}>
 \end{equation}
 
 \end{document}
