--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -464,6 +464,10 @@ We deduce
 \begin{equation}
 	E_{xy}^\varnothing = \dfrac{\mathsf{E}}{W_1+W_0} <\vec{C}|\mymat{F}_{xy}\mymat{M}_0|\vec{C}>
 \end{equation}
+and
+\begin{equation}
+	\partial_t \Li{x}^\varnothing = <\vec{C}|\mymat{G}_x|\vec{E}_1^\varnothing> \proton_0 + k_x \Theta \myout{\Li{x}}
+\end{equation}
 
 \end{document}
 
