--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -341,17 +341,17 @@ and
 
 \begin{equation}
 \left\lbrace
-\begin{array}{rcll}
-	\partial_t \Li{6} & = & <\vec{C}|\mymat{G}_6|\vec{E}_1> \proton+ k_6\left(\Theta \LiOut{6} - \Li{6}\right), &
-	\mymat{G}_6 = 
+\begin{array}{rcl}
+	\partial_t \Li{6} & = & <\vec{C}|\mymat{G}_6|\vec{E}_1> \proton+ k_6\left(\Theta \LiOut{6} - \Li{6}\right)\\
+	\mymat{G}_6 &= & k^p_{66} \mymat{F}_{66} + k^p_{67}\mymat{F}_{67} = 
 	\begin{bmatrix}
 	f_{66}k^p_{66} & f_{76} k^p_{67} \\
 	f_{67}k^p_{67} & 0 \\
 	\end{bmatrix}
 	\\
 	\\
-	\partial_t \Li{7} & = & <\vec{C}|\mymat{G}_7|\vec{E}_1> \proton + k_7\left(\Theta \LiOut{7} - \Li{7}\right), &
-	\mymat{G}_7 = 
+	\partial_t \Li{7} & = & <\vec{C}|\mymat{G}_7|\vec{E}_1> \proton + k_7\left(\Theta \LiOut{7} - \Li{7}\right)\\
+	\mymat{G}_7 & = & k^p_{77} \mymat{F}_{77} + k^p_{76}\mymat{F}_{67} = 
 	\begin{bmatrix}
 	0              & f_{76} k^p_{76}\\
 	f_{67}k^p_{76} & f_{77}k^p_{77}\\
