--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -491,6 +491,16 @@ where
 \item ${\mathsf{N}_x}$ is a {\bf second} order polynomial without constant term
 \item ${\mathsf{D}_x}$ is a {\bf third } order polynomial without constant term
 \end{itemize}
+Finally:
+\begin{equation}
+\left.\dfrac{\beta_7}{\beta_6}\right\vert_{\varnothing} = 
+\dfrac{
+\mathsf{E}\proton_0 \dfrac{\mathsf{N}_7(\LiAllOut)}{1+\mathsf{D}_7(\LiAllOut)} + k_7 \Theta 
+}
+{
+\mathsf{E}\proton_0 \dfrac{\mathsf{N}_6(\LiAllOut)}{1+\mathsf{D}_6(\LiAllOut)} + k_6 \Theta 
+}
+\end{equation}
 
 \end{document}
 
