--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -482,14 +482,14 @@ so that
 \begin{array}{rcl}
 \partial_t \beta_x^\varnothing & = & \dfrac{\mathsf{E}\proton_0}{W_1+W_3} \left( <\vec{C}|\mymat{Q}_x|\vec{C}> + <\vec{L}_x|\vec{C}>\right) + k_x \Theta \\
 \\
-& = & \mathsf{E}\proton_0 \dfrac{\mathsf{N}_x(\LiAllOut)}{1+\mathsf{D}_x(\LiAllOut)} + k_x \Theta \\
+& = & \mathsf{E}\proton_0 \dfrac{\mathsf{N}_x(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)} + k_x \Theta \\
 \end{array}
 \right.
 \end{equation}
 where 
 \begin{itemize}
-\item ${\mathsf{N}_x}$ is a {\bf second} order polynomial without constant term
-\item ${\mathsf{D}_x}$ is a {\bf third } order polynomial without constant term
+\item ${\mathsf{N}_6}$ and  ${\mathsf{N}_7}$ are  {\bf second} order polynomials without constant term
+\item ${\mathsf{D}}$ is a {\bf third } order polynomial without constant term
 \end{itemize}
 Finally:
 \begin{equation}
