--- a/src/lithium/supmat/coop/coop.tex
+++ b/src/lithium/supmat/coop/coop.tex
@@ -515,10 +515,10 @@ Finally:
 \begin{equation}
 \left.\dfrac{\beta_7}{\beta_6}\right\vert_{\varnothing} = 
 \dfrac{
-\mathsf{E}\proton_0 \dfrac{\mathsf{N}_7(\LiAllOut)}{1+\mathsf{D}_7(\LiAllOut)} + k_7 \Theta 
+\mathsf{E}\proton_0 \dfrac{\mathsf{N}_7(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)} + k_7 \Theta 
 }
 {
-\mathsf{E}\proton_0 \dfrac{\mathsf{N}_6(\LiAllOut)}{1+\mathsf{D}_6(\LiAllOut)} + k_6 \Theta 
+\mathsf{E}\proton_0 \dfrac{\mathsf{N}_6(\LiAllOut)}{1+\mathsf{D}(\LiAllOut)} + k_6 \Theta 
 }
 \end{equation}
 
